@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.6.3
 ====================================
+- Better support for checkboxes/radios/bracketed fields in login validator
 - [#5088] Fix issue with ChangePassword &validateOldPassword and Revo 2.1.1
 
 
